TestSuite/errors/err0028.pas
type TSet = set of integer;

procedure Test(var k : TSet);
begin

end;

const set1 : TSet = [1..3];

begin
Test(set1);
end.